--- a/PizzaBox.Testing/PizzaBox.Testing.csproj
+++ b/PizzaBox.Testing/PizzaBox.Testing.csproj
@@ -22,5 +22,8 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaBox.Domain\PizzaBox.Domain.csproj" />
+  </ItemGroup>
 
 </Project>
