--- a/PizzaBoxData/PizzaBoxData.csproj
+++ b/PizzaBoxData/PizzaBoxData.csproj
@@ -16,4 +16,8 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PizzaBoxLib\PizzaBoxLib.csproj" />
+  </ItemGroup>
+
 </Project>
